tests/paczka1/small_fuzzy/47209493.err
Error in line 1: A715 S841 31,0
Error in line 4: fy35v S841 93,6
Error in line 13: l3wItHewwN S841 82,6
